# Edge-2-Cloud-Sensor-Data

./: README.md
Basic-ML/: CMakeLists.txt  main.cpp
Dummy-Controller/: CMakeLists.txt  DummyMicroscope.cpp  DummyMicroscope.hpp  bindings.cpp  test.py
MultiThread/: CMakeLists.txt  Multithread.cpp
PdM-Cpp/: docker-compose.yaml
PdM-Cpp/backend/: CMakeLists.txt  Dockerfile
PdM-Cpp/backend/include/: DataProcessor.h  Notifier.h  Sensor.h
PdM-Cpp/backend/src/: DataProcessor.cpp  Notifier.cpp  Sensor.cpp  main.cpp
PdM-Cpp/frontend/: Dockerfile  package.json
PdM-Cpp/frontend/public/: index.html
PdM-Cpp/frontend/src/: App.js  index.js
PdM-Cpp/k8s/: predictive-maintenance-backend-deployment.yaml  predictive-maintenance-frontend-deployment.yaml
